--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "demo",
   "version": "1.0.0",
   "main": "index.js",
+    "type": "module",
   "dependencies": {
     "allure-js-commons": "^1.3.2",
     "ansi-regex": "^6.1.0",
@@ -100,3 +101,4 @@
   "license": "ISC",
   "description": ""
 }
+
